Meta-keys in the admin interface
Squashed commit of the following:

commit b48534c881a066690957f4c78549cb034cb07c53
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Mon May 12 08:00:27 2014 +0200

    [admin] show metakey contexts; ability to filter list

commit faf2459753801671e769b880a6d24ed0476dd2ed
Author: Max F. Albrecht <1@178.is>
Date:   Thu May 15 19:53:02 2014 +0200

    Gemfile: upgrade font-awesome-sass to a version that actually exists

commit 2606d58f46c585b09457315ce099ef18f4b9edc8
Author: Max F. Albrecht <1@178.is>
Date:   Wed May 14 17:33:22 2014 +0200

    gems: update newrelic gem

commit 6ef320d36967ff79f433bc1a537c886632ba8f51
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed May 14 10:13:58 2014 +0200

    New vocabulary builder for context

    commit d518e0a9858c22e534c39e155da0e03d608357a2
    Author: Thomas Schank <DrTom@schank.ch>
    Date:   Wed May 14 09:31:56 2014 +0200

        Complete test and use consistently symbols everywhere

    commit 2fa1821e8c64439e31d506a2563770637be5088d
    Author: Thomas Schank <DrTom@schank.ch>
    Date:   Wed May 14 09:10:49 2014 +0200

        New test for building vocabulary ... tbc

    commit f8f08e90277b55172598de09391f3c5a07492b00
    Author: Thomas Schank <DrTom@schank.ch>
    Date:   Wed May 14 08:42:27 2014 +0200

        More readable code

    commit 6818196b621885c78e557cf23c7b0f59e8afd505
    Author: Thomas Schank <DrTom@schank.ch>
    Date:   Wed May 14 08:39:51 2014 +0200

        Extracted vocabulary query and modularized it

commit 8944fd38135434e5d59d5a3be05744f6966b7843
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue May 13 13:07:59 2014 +0200

    Group meta_terms count also by meta_key_definition

commit 83a06668688ae6248a292d3fcf5b2330df876fa3
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue May 13 11:25:42 2014 +0200

    Add as count to meta_terms_with_non_zero_count in meta_context

commit 18053baf00a9dfc7daa9e77e0108752b1897949e
Author: Thomas Schank <DrTom@schank.ch>

--- a/app/assets/stylesheets/app_admin/_meta_keys.css.sass
+++ b/app/assets/stylesheets/app_admin/_meta_keys.css.sass
@@ -1,14 +1,19 @@
-#alphabetical-order
-  margin-bottom: 1em
+.meta-keys
 
-table td
-  label
-    width: 4em
-  input[type=text]
-    width: 24em
+  #alphabetical-order
+    margin-bottom: 1em
 
-.placeholder
-  border: 2px dashed green
-  background: lightgreen
-  height: 144px
-  width: 100%
+  ul#sortable li
+    margin-bottom: 3px
+    padding: 1em
+    background: #fbfbfb
+    label
+      width: 9em
+    input[type=text]
+      width: 24em
+
+  .placeholder
+    border: 2px dashed green
+    background: lightgreen
+    height: 144px
+    width: 100%
