--- a/app/views/app_admin/meta_keys/_form.html.haml
+++ b/app/views/app_admin/meta_keys/_form.html.haml
@@ -1,65 +1,67 @@
-= form_for [:app_admin, @meta_key], html: {class: "form-horizontal", role: "form"} do |f|
+.meta-keys
+  = form_for [:app_admin, @meta_key], html: {class: "form-horizontal", role: "form"} do |f|
 
-  = hidden_field_tag :meta_terms_positions
+    = hidden_field_tag :meta_terms_positions
 
-  .form-group
-    %label.control-label.col-sm-2 Label
-    .col-sm-4
-      = f.text_field :id, class: 'form-control', disabled: f.object.persisted?
-
-  - unless @meta_key.persisted?
     .form-group
-      %label.control-label.col-sm-2 Meta datum object type
+      %label.control-label.col-sm-2 Label
       .col-sm-4
-        = f.select :meta_datum_object_type, MetaKey.object_types, {include_blank: false}, {class: "form-control"}
+        = f.text_field :id, class: 'form-control'#, disabled: f.object.persisted?
 
-  - if @meta_key.meta_datum_object_type == 'MetaDatumMetaTerms'
-    .form-group
-      %label.control-label.col-sm-2 Terms
-      .col-sm-6
-        = link_to "#", class: "btn btn-primary", id: "alphabetical-order" do
-          %i.fa.fa-sort-alpha-asc
-          Apply Alphabetical Order
-        %table.table.table-hover#sortable
-          = f.fields_for :meta_terms do |ff|
-            %tr{id: "#{ff.object.id}", data: { de_ch: ff.object.de_ch }}
-              %td
-                - if ff.object.new_record?
+    - unless @meta_key.persisted?
+      .form-group
+        %label.control-label.col-sm-2 Meta datum object type
+        .col-sm-4
+          = f.select :meta_datum_object_type, MetaKey.object_types, {include_blank: false}, {class: "form-control"}
+
+    - if @meta_key.meta_datum_object_type == 'MetaDatumMetaTerms'
+      .form-group
+        %label.control-label.col-sm-2 Terms
+        .col-sm-6
+          = link_to "#", class: "btn btn-primary", id: "alphabetical-order" do
+            %i.fa.fa-sort-alpha-asc
+            Apply Alphabetical Order
+          %ul#sortable.list-unstyled
+            = f.fields_for :meta_terms do |ff|
+              - if ff.object.new_record?
+                %li.new-term
                   %h2 Add Meta Term
-                - else
+                  = ff.label :term, "Term"
+                  = ff.text_field :term
+              - else
+                %li{id: "#{ff.object.id}", data: { term: ff.object.term }}
                   = label_tag :id, "ID"
                   = text_field_tag :id, ff.object.id, disabled: true
-                %br
-                - LANGUAGES.each do |language|
-                  = ff.label language, language.upcase
-                  = ff.text_field language
                   %br
-                - if f.object.used_term_ids.include?(ff.object.id)
-                  Used, merge to:
-                  = text_field_tag "reassign_term_id[#{ff.object.id}]", nil, size: 31
+                  = ff.label :term, "Term"
+                  = ff.text_field :term
                   %br
-                - if ff.object.persisted? && 
-                  = ff.check_box :_destroy
-                  = ff.label :_destroy, 'Delete'
+                  - if f.object.used_term_ids.include?(ff.object.id)
+                    = label_tag "reassign_term_id[#{ff.object.id}]", "Used, merge to:"
+                    = text_field_tag "reassign_term_id[#{ff.object.id}]", nil, size: 31
+                    %br
+                  - if ff.object.persisted? && 
+                    = ff.check_box :_destroy
+                    = ff.label :_destroy, 'Delete'
+
+      .form-group
+        .col-sm-offset-2.col-sm-4
+          .checkbox
+            %label
+              = f.check_box :is_extensible_list
+              Extensible list?
 
     .form-group
       .col-sm-offset-2.col-sm-4
-        .checkbox
-          %label
-            = f.check_box :is_extensible_list
-            Extensible list?
-
-  .form-group
-    .col-sm-offset-2.col-sm-4
-      = button_tag "Submit", type: 'submit', class: "btn btn-success"
-      - if @meta_key.persisted?
-        = link_to "Cancel", edit_app_admin_meta_key_path(@meta_key), class: "btn btn-danger"
+        = button_tag "Submit", type: 'submit', class: "btn btn-success"
+        - if @meta_key.persisted?
+          = link_to "Cancel", edit_app_admin_meta_key_path(@meta_key), class: "btn btn-danger"
 
 :javascript
   $(document).ready(function(){
     function getPositions() {
       var positions = [];
-      $('#sortable tr').each(function() {
+      $('#sortable li').each(function() {
         if(this.id) {
           positions.push(this.id);
         }
@@ -69,7 +71,7 @@
 
     $("#sortable").sortable({
       axis: 'y',
-      items: 'tr',
+      items: '> li:not(.new-term)',
       cursor: 'move',
       placeholder: 'placeholder',
       forcePlaceholderSize: true,
@@ -77,14 +79,13 @@
         getPositions();
       }
     });
-    $("#sortable").disableSelection();
 
     $('#alphabetical-order').on('click', function(e) {
       e.preventDefault();
 
       function compare(a, b) {
-        var aValue = $(a).data('de-ch').toLowerCase();
-        var bValue = $(b).data('de-ch').toLowerCase();
+        var aValue = $(a).data('term').toLowerCase();
+        var bValue = $(b).data('term').toLowerCase();
         if(aValue < bValue) {
           return -1;
         }
@@ -94,7 +95,7 @@
         return 0;
       }
 
-      $('#sortable tr[data-de-ch]').detach().sort(compare).prependTo('#sortable tbody');
+      $('#sortable li[data-term]').detach().sort(compare).prependTo('#sortable');
       getPositions();
     });
   });
