--- a/app/views/filter_sets/show.html.haml
+++ b/app/views/filter_sets/show.html.haml
@@ -20,7 +20,7 @@
     #ui-resources-list-container.ui-container.midtone.bordered.rounded-bottom
 
       = render :partial => "media_resources/list/toolbar", 
-                 :locals => {:title => "Filterset enthält",
+                 :locals => {:title => _("Filterset enthält"),
                              :subtitle => _("%d content elements") % @filter_set.filtered_resources(current_user).accessible_by_user(current_user,:view).count,
                              :actions => render(:partial => "media_sets/actions/save_display_settings")}
 
