--- a/app/views/media_entries/_tabs.html.haml
+++ b/app/views/media_entries/_tabs.html.haml
@@ -5,10 +5,13 @@
     %li.ui-tabs-item{:class => media_entry_parents_page? ? "active" : ""}
       %a.parent_sets{:href => parents_media_entry_path(@media_entry)} Übergeordnete Sets
 
-  - @other_relevant_context_groups.each do |meta_context_group|
-    %li.ui-tabs-item{:class => media_entry_context_group_page?(meta_context_group) ? "active" : ""}
-      %a{:href => context_group_media_entry_path(@media_entry.id, meta_context_group.name)}= meta_context_group.name
+  -# - @other_relevant_context_groups.each do |meta_context_group|
+  -#   %li.ui-tabs-item{:class => media_entry_context_group_page?(meta_context_group) ? "active" : ""}
+  -#     %a{:href => context_group_media_entry_path(@media_entry.id, meta_context_group.name)}= _("Vokabular")
 
+  %li.ui-tabs-item{:class => media_entry_contexts_page? ? "active" : ""}
+    %a{:href => contexts_media_entry_path(@media_entry)}= _("Vokabular")
+  
   - if @media_entry.has_location?
     %li.ui-tabs-item{:class => media_entry_map_page? ? "active" : ""}
       %a{:href => map_media_entry_path(@media_entry)} Karte
