--- a/app/views/media_sets/show.html.haml
+++ b/app/views/media_sets/show.html.haml
@@ -19,9 +19,7 @@
 
     #ui-resources-list-container.ui-container.midtone.bordered.rounded-bottom
 
-      - count_visible = @media_set.child_media_resources.accessible_by_user(current_user,:view).count
-      - count_invisible = @media_set.child_media_resources.count
-      - subtitle = count_visible == count_invisible ? n_("%d item", "%d items", count_visible) % count_visible : _("%d of %d items visible to you") % [count_visible, count_invisible]
+      - subtitle = @entries_count == @entries_total_count ? n_("%d item", "%d items", @entries_count) % @entries_count : _("%d of %d items visible to you") % [@entries_count, @entries_total_count]
       = render :partial => "media_resources/list/toolbar", 
                  :locals => {:title => _("Set contains"),
                              :subtitle => subtitle,
