Revert "UI/UX: context 1/3" since tests fail
This reverts commit f9cebb3c07f89a8e5f5880124b7e7493adc419bb.

--- a/app/views/application/sidebar/_my_archive.html.haml
+++ b/app/views/application/sidebar/_my_archive.html.haml
@@ -50,4 +50,4 @@
         - unless @user_contexts_count.zero?
           %li.ui-side-navigation-item{:class => my_contexts_page? ? "active" : ""}
             %a.strong{:href => my_contexts_path} 
-              = _("My Vocabularies")
+              = _("Contexts")
