--- a/app/views/media_sets/_tabs.html.haml
+++ b/app/views/media_sets/_tabs.html.haml
@@ -9,7 +9,14 @@
         = _("Parent sets")
 
   - unless @media_set.individual_contexts.blank?
-
-    %li.ui-tabs-item{:class => media_set_context_page? ? "active" : ""}
-      %a{:href => context_media_set_path(@media_set, @media_set.individual_contexts.first)}
+    %li.ui-tabs-item{:class => media_set_abstract_page? ? "active" : ""}
+      %a{:href => abstract_media_set_path}
+        = _("Extract")
+    %li.ui-tabs-item{:class => media_set_vocabulary_page? ? "active" : ""}
+      %a{:href => vocabulary_media_set_path}
         = _("Vocabulary")
+
+  - if current_user.authorized?(:edit, @media_set) and !@media_set.individual_and_inheritable_contexts.empty?
+    %li.ui-tabs-item{:class => media_set_inheritable_contexts_page? ? "active" : ""}
+      %a{:href => inheritable_contexts_media_set_path(@media_set)}
+        = _("Contexts")
