admin: meta context with meta key definitions section and groups section
Squashed commit of the following:

commit ed25df156659ab8c6aa15851afd01467e9129c58
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Mon May 26 10:09:09 2014 +0200

    meta context with meta key definitions section

commit cb07a0a5573440fdef6d52b348ecb929fd3d9466
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Mon May 26 07:34:42 2014 +0200

    admin meta context groups section

--- a/app/views/layouts/app_admin.html.haml
+++ b/app/views/layouts/app_admin.html.haml
@@ -67,6 +67,8 @@
               %li
                 = link_to "Meta Keys", app_admin_meta_keys_path
                 = link_to "Meta Terms", app_admin_meta_terms_path
+                = link_to "Meta Contexts", app_admin_meta_contexts_path
+                = link_to "Meta Context Groups", app_admin_meta_context_groups_path
 
           %li.dropdown
             %a.dropdown-toggle{href: "#", data: {toggle: 'dropdown'}} 
