--- a/app/assets/stylesheets/app_admin.css.sass
+++ b/app/assets/stylesheets/app_admin.css.sass
@@ -5,6 +5,8 @@
 @import 'font-awesome'
 @import 'app_admin/overrides'
 @import 'app_admin/meta_keys'
+@import 'app_admin/meta_context_groups'
+@import 'app_admin/meta_contexts'
 
 @import 'components/ui-autocomplete'
 
