Upgrade to rails 4.1.1
Remove composite_primary_keys gem (prepare for rails 4.1)

and refactor madek so it doesn't need it

Upgrade gems to rails 4.1.1; require ruby 2.1.1

Revert sass gem version (bundler problem)

Rename search to text_search

One more search

Fix person search

Fix ...

...wip...

Fix

Fix spec

search -> text_search

MediaResourcesFilter search -> text_search

Fix spec

Resolved some assets issues

Resurrect old search method for users

Use hacky_search in people_controller

Fix keywords controller

Remove flash from redirect

Debugging to_sql problem

Fix prepared query

Use flash.keep instead of forwarding the flash object

Fix return in redirect

Monkey patch to_sql with unprepared_statement

Fix a subquery

Fix one issue in person#create

Fix a issue in app_admien/media_sets_controller

Fix the fix

Fix user autocompletion in app_admin/users

--- a/app/assets/stylesheets/combos/_ui-resources-grid.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-grid.sass
@@ -92,13 +92,13 @@
   .grid.active
     .ui-thumbnail.media-set:hover,
     .ui-thumbnail.filter-set:hover
-      background: $mono-brightest image-url("backgrounds/thumb-set-backg.png@2x") 0 0 no-repeat
+      background: $mono-brightest image-url("backgrounds/thumb-set-backg@2x.png") 0 0 no-repeat
       background-size: 168px 168px
     .ui-thumbnail.media-catalog:hover
-      background: $mono-brightest image-url("backgrounds/thumb-catalog-backg.png@2x") 3px -4px no-repeat
+      background: $mono-brightest image-url("backgrounds/thumb-catalog-backg@2x.png") 3px -4px no-repeat
       background-size: 328px 236px
     .ui-thumbnail.video .ui-thumbnail-image-wrapper
-      background: $mono-brightest image-url("backgrounds/thumb-video-backg.png@2x") 0 0px no-repeat
+      background: $mono-brightest image-url("backgrounds/thumb-video-backg@2x.png") 0 0px no-repeat
       background-size: 138px 138px
 
 /* Projection Styles
