--- a/app/assets/stylesheets/overrides/_jquery.plupload.queue.sass
+++ b/app/assets/stylesheets/overrides/_jquery.plupload.queue.sass
@@ -22,7 +22,7 @@ li.plupload_delete a, .plupload_file_action .delete_mei, .plupload_file_action .
   +dimension(20px, 20px)
 
 li.plupload_failed a
-  background-image: image-url("vendor/plupload/error.gif")
+  background-image: image-url("plupload/error.gif")
 
 li.plupload_done a
   +dimension(20px, 20px)
