--- a/app/assets/stylesheets/combos/_ui-resources-list.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-list.sass
@@ -143,10 +143,10 @@
   .ui-resources.list.active
     .ui-thumbnail.media-set:hover,
     .ui-thumbnail.filter-set:hover
-      background: $mono-brightest image-url("backgrounds/thumb-set-backg.png@2x") 0 0 no-repeat
+      background: $mono-brightest image-url("backgrounds/thumb-set-backg@2x.png") 0 0 no-repeat
       background-size: 168px 168px
     .ui-thumbnail.video .ui-thumbnail-image-wrapper
-      background: $mono-brightest image-url("backgrounds/thumb-video-backg.png@2x") 0 0px no-repeat
+      background: $mono-brightest image-url("backgrounds/thumb-video-backg@2x.png") 0 0px no-repeat
       background-size: 138px 138px
 
 /* Projection Styles
