admin: Improvement metacontexts and metacontext groups
delivers [#72166730]

Squashed commits:

admin can add meta keys to meta context

admin can remove a context from a context group

admin can delete a context

admin can delete meta key from a context

resolve depreciation warnings

fix meta context delete from meta conntext group

run tests for admin_meta_contexts

--- a/app/views/app_admin/groups/show.html.haml
+++ b/app/views/app_admin/groups/show.html.haml
@@ -14,7 +14,7 @@
       Edit
 
   %li
-    =link_to app_admin_group_path(@group), method: :delete, class: "btn btn-danger", confirm: "Are you really want to delete this group?" do
+    =link_to app_admin_group_path(@group), method: :delete, class: "btn btn-danger", data: {confirm: "Are you really want to delete this group?"} do
       %i.icon-trash-o
       Delete
 
