--- a/app/views/app_admin/meta_contexts/_form.html.haml
+++ b/app/views/app_admin/meta_contexts/_form.html.haml
@@ -9,7 +9,7 @@
     .form-group
       %label.control-label.col-sm-2 Meta context group
       .col-sm-4
-        = f.select :meta_context_group_id, MetaContextGroup.all.collect { |mcg| [ mcg.name, mcg.id ] }, { include_blank: false }, { class: "form-control" }
+        = f.select :meta_context_group_id, MetaContextGroup.all.collect { |mcg| [ mcg.name, mcg.id ] }, {}, { class: "form-control" }
 
     - if f.object.persisted?
       %h3 Meta Key Definitions
@@ -40,10 +40,14 @@
               %td= ff.object.hint
               %td= ff.object.description
               %td= ff.object.is_required ? "Yes" : "No"
-              %td
+              %td.no-wrap
                 = link_to edit_app_admin_meta_context_meta_key_definition_path(f.object, ff.object), class: "btn btn-warning btn-xs" do
                   %i.icon-pen
                   Edit
+                = link_to app_admin_meta_context_meta_key_definition_path(f.object, ff.object), method: :delete, data: {confirm: "Are you sure you want to delete this meta key definition?"}, class: "btn btn-danger btn-xs" do
+                  %i.icon-trash
+                  Delete
+
     .form-group              
       = f.submit "Save", class: "btn btn-success"
 
