--- a/app/views/app_admin/previews/_preview.html.haml
+++ b/app/views/app_admin/previews/_preview.html.haml
@@ -10,7 +10,7 @@
       %i.fa.fa-eye-open
       Details
 
-    = link_to app_admin_preview_path(preview), method: 'DELETE', confirm: "Really delete prview", class: "btn btn-xs btn-danger" do
+    = link_to app_admin_preview_path(preview), method: 'DELETE', data: {confirm: "Are you sure you want to delete the preview?"}, class: "btn btn-xs btn-danger" do
       %i.icon-trash
       Delete
 
