admin: metadatum / terms of metakeys
delivers [#62565044]

Squashed commit of the following:

commit 27bf1a41976d4a77988717148b57292180cbadb7
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Wed May 28 15:49:04 2014 +0200

    update personas db dump

commit 1137e1d4a0230486eb54bb2bfe0cef4d731d72aa
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Mon May 19 10:31:39 2014 +0200

    Squashed commits:

    meta terms sorting adjustments; alphabetical order flag

    display meta terms list as closed list if there is more than 16 of them

--- a/app/views/app_admin/meta_keys/_form.html.haml
+++ b/app/views/app_admin/meta_keys/_form.html.haml
@@ -2,11 +2,12 @@
   = form_for [:app_admin, @meta_key], html: {class: "form-horizontal", role: "form"} do |f|
 
     = hidden_field_tag :meta_terms_positions
+    = f.hidden_field :meta_terms_alphabetical_order
 
     .form-group
       %label.control-label.col-sm-2 Label
       .col-sm-4
-        = f.text_field :id, class: 'form-control'#, disabled: f.object.persisted?
+        = f.text_field :id, class: 'form-control'
 
     - unless @meta_key.persisted?
       .form-group
@@ -18,7 +19,7 @@
       .form-group
         %label.control-label.col-sm-2 Terms
         .col-sm-6
-          = link_to "#", class: "btn btn-primary", id: "alphabetical-order" do
+          = link_to apply_alphabetical_order_app_admin_meta_key_path(@meta_key), class: "btn btn-primary", id: "alphabetical-order", method: :post, remote: true do
             %i.fa.fa-sort-alpha-asc
             Apply Alphabetical Order
           %ul#sortable.list-unstyled
@@ -75,27 +76,35 @@
       cursor: 'move',
       placeholder: 'placeholder',
       forcePlaceholderSize: true,
-      stop: function(event, ui) {
+      update: function(event, ui) {
         getPositions();
+        $('#meta_key_meta_terms_alphabetical_order').val(0);
       }
     });
 
-    $('#alphabetical-order').on('click', function(e) {
-      e.preventDefault();
+    $(document).ajaxSuccess(function(event, xhr, settings) {
+      if($('#alphabetical-order').attr('href') === settings.url) {
+        var data = $.parseJSON(xhr.responseText);
+        console.log('data:', data);
+        $.each(data, function(index, id) {
+          $('#' + id).attr('data-position', index);
+        });
 
-      function compare(a, b) {
-        var aValue = $(a).data('term').toLowerCase();
-        var bValue = $(b).data('term').toLowerCase();
-        if(aValue < bValue) {
-          return -1;
+        function compare(a, b) {
+          var aValue = $(a).data('position');
+          var bValue = $(b).data('position');
+          if(aValue < bValue) {
+            return -1;
+          }
+          if(aValue > bValue) {
+            return 1;
+          }
+          return 0;
         }
-        if(aValue > bValue) {
-          return 1;
-        }
-        return 0;
+
+        $('#sortable li[data-position]').detach().sort(compare).prependTo('#sortable');
+        $('#meta_key_meta_terms_alphabetical_order').val(1);
+        getPositions();
       }
-
-      $('#sortable li[data-term]').detach().sort(compare).prependTo('#sortable');
-      getPositions();
     });
   });
