--- a/app/views/media_resources/edit/fields/_meta_datum_meta_terms.html.haml
+++ b/app/views/media_resources/edit/fields/_meta_datum_meta_terms.html.haml
@@ -1,4 +1,7 @@
 - if definition.meta_key.is_extensible_list
-  = render :partial => "media_resources/edit/fields/meta_datum_meta_terms/extensible_list", :locals => {:definition => definition, :meta_datum => meta_datum}
+  = render :partial => "media_resources/edit/fields/meta_datum_meta_terms/extensible_list", :locals => {:definition => definition, :meta_datum => meta_datum, :closed_list => false}
 - else
-  = render :partial => "media_resources/edit/fields/meta_datum_meta_terms/not_extensible_list", :locals => {:definition => definition, :meta_datum => meta_datum}
+  - if definition.meta_key.meta_terms.length > 16
+    = render :partial => "media_resources/edit/fields/meta_datum_meta_terms/extensible_list", :locals => {:definition => definition, :meta_datum => meta_datum, :closed_list => true }
+  - else
+    = render :partial => "media_resources/edit/fields/meta_datum_meta_terms/not_extensible_list", :locals => {:definition => definition, :meta_datum => meta_datum}
