ui: context/vocabulary revamp #1
- combine old UI of context, vocabulary and abstract into 'vocabulary' tab
- rename all instances of 'context' to vocabulary
- re-implement term-usage filter-slider
- retired parts of the old internal API (abstract etc)

--- a/app/views/my/contexts.html.haml
+++ b/app/views/my/contexts.html.haml
@@ -8,7 +8,7 @@
       .ui-body-title
         .ui-body-title-label
           %h1.title-xl
-            = _("Contexts")
+            = _("Vokabular")
 
     .app-body-ui-container
       .bordered.ui-container.midtone.rounded.table
@@ -19,7 +19,7 @@
           
           = render :partial => "meta_contexts/wrapper", 
                      :locals => {:meta_contexts => @contexts, 
-                                 :title => _("My contexts")}
+                                 :title => _("Vokabular")}
 
   .app-footer-push
 = render :partial => "application/footer"
