Changed links from admin to user interface to be opened in a new tab, modified media sets and media files link name/icon

--- a/app/views/app_admin/media_files/_media_file.html.haml
+++ b/app/views/app_admin/media_files/_media_file.html.haml
@@ -3,8 +3,9 @@
   %td= media_file.content_type
   %td
     - if media_file.media_entry
-      = link_to media_entry_path(media_file.media_entry) do
-        = media_entry_path(media_file.media_entry)
+      = link_to media_entry_path(media_file.media_entry), target: "_blank" do
+        %i.icon-vis-graph
+        Show media file
     - else
       .text-danger
         no media entry exists
