--- a/app/views/app_admin/meta_terms/_meta_term.html.haml
+++ b/app/views/app_admin/meta_terms/_meta_term.html.haml
@@ -21,6 +21,6 @@
       to...
     - if meta_term.is_used?
       %br
-      = link_to result_search_path(terms: meta_term.term) do
+      = link_to result_search_path(terms: meta_term.term), target: "_blank" do
         %i.icon-vis-graph
         Show resources
