--- a/app/views/layouts/app_admin.html.haml
+++ b/app/views/layouts/app_admin.html.haml
@@ -91,7 +91,7 @@
                   Users
         %ul.nav.navbar-nav.navbar-right
           %li
-            = link_to root_path do
+            = link_to root_path, target: "_blank" do
               %i.icon-arrow-left
               return to user-interface
               
