API: docu redirects, new madek urls, docu custom_urls

--- a/app/views/layouts/api_docs.html.haml
+++ b/app/views/layouts/api_docs.html.haml
@@ -36,6 +36,8 @@
                 -# %li= link_to "Forwarding Authentication and Authorization", forwarding_auth_public_api_docs_path 
                 %li= link_to "Resources (in general)", resources_public_api_docs_path 
                 %li= link_to "Query parameters", query_parameters_public_api_docs_path 
+                %li= link_to "URLs and Redirects", urls_public_api_docs_path 
+
 
           %ul.nav.navbar-nav
             %li.dropdown
