ui: context/vocabulary revamp: fixing showstoppers
commit e9a20923a1e6d286b7c702df60ca4aa2a458b18a
Author: Max F. Albrecht <1@178.is>
Date:   Mon Jun 2 13:18:38 2014 +0200

    vocabulary: make group of keys horizontal

commit 0f8b6378787558bd6d71e6412978f51a3c8f8b85
Author: Max F. Albrecht <1@178.is>
Date:   Fri May 30 17:37:35 2014 +0200

    my/dashboard: swap user_contexts and welcome message

commit af7949e15ce734df85c49fa539b4262b97f66894
Author: Max F. Albrecht <1@178.is>
Date:   Fri May 30 17:05:34 2014 +0200

    wrap vocabularies listing in proper rows

commit d938b7a7a1eb681d5abb64ed38e486884d8555d3
Author: Max F. Albrecht <1@178.is>
Date:   Fri May 30 17:04:48 2014 +0200

    when showing contexts, don't crash if a key has no terms

--- a/app/views/meta_contexts/_wrapper.html.haml
+++ b/app/views/meta_contexts/_wrapper.html.haml
@@ -1,3 +1,9 @@
+:ruby
+  # filter contexts that the current user has any resources for
+  user_contexts= meta_contexts.map { |context|
+    context unless MediaResource.filter(current_user, {:meta_context_names => [context.name]}).empty?
+  }.reject(&:nil?)
+
 .ui-resources-holder.pal
   - if defined? title
     .ui-resources-header
@@ -6,16 +12,14 @@
         - if defined? link
           %a.strong{:href => link} 
             = _("Show all")
+
   .ui-contexts
-    .row
-      - meta_contexts.each do |context|
-        - media_resource = MediaResource.filter(current_user, {:meta_context_names => [context.name]}).ordered_by(:updated_at).first
-        - if media_resource
+    - user_contexts.in_groups_of(3, false).each_with_index do |contextrow, index|
+      .row
+        - contextrow.each do |context|
           .col1of3
-            .prs
+            .prs.pbm
               .ui-context{:"data-name" => context.name}
                 %h3.title-m
                   %a{:href => context_path(context)}= context
                 %p.ui-thumbnail-meta-subtitle= context.description
-              - unless meta_contexts.last == context
-                / .separator.mbm
