Fixes for the admin meta-contexs features
Squashed commit of the following:

commit af1cf5e27d876eb1704bb017102ec387576be618
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Tue Jun 3 09:28:47 2014 +0200

    Squashed commits:

    fix removing meta context from a meta context group

    proper action labels, rescue action exceptions

    fix deleting a context when it is associated with media sets

--- a/app/views/app_admin/meta_context_groups/_form.html.haml
+++ b/app/views/app_admin/meta_context_groups/_form.html.haml
@@ -19,7 +19,7 @@
                 .checkbox
                   %label
                     = ff.check_box :meta_context_group_id, {}, "", @meta_context_group.id
-                    Delete
+                    Remove
 
     .form-group
       .col-sm-offset-2.col-sm-4
