ui: context/vocabulary revamp: fixing showstoppers
Squashed commit of the following:

commit 97c3e3c7d867939ba2bf899a2f0c9f0e80f01760
Author: Max F. Albrecht <1@178.is>
Date:   Tue Jun 3 14:41:16 2014 +0200

    fix the test #2

commit e9a72336092682a04eb06ebfff16a6c0d4b5586a
Author: Max F. Albrecht <1@178.is>
Date:   Mon Jun 2 16:48:51 2014 +0200

    fix the test

commit aa394166f9bac1fcbf5e6d864a6f7949abbb2aa4
Author: Max F. Albrecht <1@178.is>
Date:   Mon Jun 2 15:21:01 2014 +0200

    wording

commit 0efad30b9e825b1ff456d74371c0c9b1e84a5e3e
Author: Max F. Albrecht <1@178.is>
Date:   Mon Jun 2 15:20:47 2014 +0200

    ask for confirmation before removing context from set

commit 7cd61aa7741bc4709af8be8ac2f3a9188ce92879
Author: Max F. Albrecht <1@178.is>
Date:   Mon Jun 2 15:20:03 2014 +0200

    also guard media_set controller agains contexts with empty keys

--- a/app/views/media_sets/individual_contexts.html.haml
+++ b/app/views/media_sets/individual_contexts.html.haml
@@ -31,13 +31,14 @@
         .col1of3.by-right
           - if @can_edit
             - if @context['enabled']
-              =link_to disable_context_media_set_path(@media_set, @context), method: :put, class: 'button' do
-                - if @context['inherited']
+              - if @context['inherited']
+                =link_to disable_context_media_set_path(@media_set, @context), method: :put, class: 'button' do
                   %i.icon-close
                   =_('Deaktivieren')
-                - else
+              - else
+                =link_to disable_context_media_set_path(@media_set, @context), method: :put, class: 'button', data: {confirm: "Soll die Zuweisung des Vokabulars \"#{@context.name}\" wirklich vom aktuellen Set entfernt werden?"} do
                   %i.icon-trash
-                  =_('Entfernen!')
+                  =_('Entfernen')
             - else
               =link_to enable_context_media_set_path(@media_set, @context), method: :put, class: 'button' do
                 %i.icon-checkmark
@@ -45,7 +46,7 @@
         
           %a.button.mls{href: context_path(@context.id)}
             %i.icon-eye
-            View
+            Anzeigen
     
     .ui-container.midtone.bordered.rounded-bottom
       = render :partial => "vocabulary/vocabulary"
