--- a/app/views/media_sets/individual_contexts.html.haml
+++ b/app/views/media_sets/individual_contexts.html.haml
@@ -17,21 +17,21 @@
           - else
             .dropdown.ui-dropdown
               %h2.dropdown-toggle.ui-drop-toggle.title-l.separated.light.mbm{"data-toggle" => "dropdown", 
-                                                                  class: @context['enabled'] ? 'link' : 'weak'}
+                                                                  class: @context.enabled ? 'link' : 'weak'}
                 =(@context.label || @context.name)
                 %i.icon-arrow-down
               %ul.dropdown-menu.ui-drop-menu{"aria-labelledby" => "dLabel", role: "menu", style: "top: 100%; bottom: auto;"}
                 - (@individual_contexts-[@context]).each do |context|
                   %li.ui-drop-item
-                    %a{class: context['enabled'] ? '' : 'disabled', href: context_media_set_path(@media_set.id, context.id)}
+                    %a{class: context.enabled ? '' : 'disabled', href: context_media_set_path(@media_set.id, context.id)}
                       = (context.label || context.name)
           
           %p.paragraph-l= @context.description
 
         .col1of3.by-right
           - if @can_edit
-            - if @context['enabled']
-              - if @context['inherited']
+            - if @context.enabled
+              - if @context.inherited
                 =link_to disable_context_media_set_path(@media_set, @context), method: :put, class: 'button' do
                   %i.icon-close
                   =_('Deaktivieren')
