Add search (indexing) test after moving people-metadata

--- a/app/views/layouts/app_admin.html.haml
+++ b/app/views/layouts/app_admin.html.haml
@@ -75,7 +75,7 @@
               %i.fa.fa-users
               Users &amp; Groups
               %b.caret
-            %ul.dropdown-menu
+            %ul.menu-users-and-groups.dropdown-menu
               %li
                 = link_to app_admin_applications_path do
                   %i.fa.fa-flask
