--- a/app/views/layouts/app_admin.html.haml
+++ b/app/views/layouts/app_admin.html.haml
@@ -25,10 +25,20 @@
             = link_to app_admin_statistics_path do
               %i.fa.fa-bar-chart-o
               Info + Statistics
-          %li
-            =link_to app_admin_settings_path do
+          %li.dropdown
+            %a.dropdown-toggle{href: "#", data: {toggle: 'dropdown'}} 
               %i.icon-cog
               Settings
+              %b.caret
+            %ul.dropdown-menu
+              %li
+                =link_to app_admin_settings_path do
+                  %i.icon-cog
+                  General settings
+              %li
+                = link_to app_admin_usage_terms_path do
+                  %i.icon-cog
+                  Usage terms
           %li.dropdown
             %a.dropdown-toggle{href: "#", data: {toggle: 'dropdown'}} 
               %i.fa.fa-files-o
