--- a/app/views/app_admin/users/index.html.haml
+++ b/app/views/app_admin/users/index.html.haml
@@ -38,6 +38,10 @@
         Apply
 
 .row
+  = "Number of users found:"
+  %span#counter #{@users.total_count}
+
+.row
 
   .col-md-12
     %table.table.table-striped
