--- a/app/views/app_admin/groups/index.html.haml
+++ b/app/views/app_admin/groups/index.html.haml
@@ -38,6 +38,10 @@
       New group
 
 .row
+  = "Number of groups found:"
+  %span#counter #{@groups.total_count}
+
+.row
 
 
   .col-md-12
@@ -55,5 +59,4 @@
 
 
 = paginate @groups, theme: 'app_admin'
-
 
