--- a/app/views/app_admin/media_sets/index.html.haml
+++ b/app/views/app_admin/media_sets/index.html.haml
@@ -18,6 +18,9 @@
 
       = button_tag type: 'submit', class: 'btn btn-sm' do
         Filter
+    .row
+      = "Number of media sets found:"
+      %span#counter #{@media_sets.total_count}
      
 
   .col-md-9
