--- a/app/views/app_admin/meta_context_groups/index.html.haml
+++ b/app/views/app_admin/meta_context_groups/index.html.haml
@@ -6,6 +6,9 @@
     = link_to new_app_admin_meta_context_group_path, class: 'btn btn-success' do
       %i.fa.fa-plus
       New Meta Context Group
+.row
+  = "Number of meta context groups:"
+  %span#counter #{@meta_context_groups.count}
 
 %table.table.table-striped
   %thead
