--- a/app/views/app_admin/meta_contexts/index.html.haml
+++ b/app/views/app_admin/meta_contexts/index.html.haml
@@ -6,6 +6,9 @@
     = link_to new_app_admin_meta_context_path, class: 'btn btn-success' do
       %i.fa.fa-plus
       New Meta Context
+.row
+  = "Number of meta contexts:"
+  %span#counter #{@meta_contexts.count}
 
 %table.table.table-striped
   %thead
