Fix group and user forms, extend and adjust feature tests

--- a/app/views/app_admin/users/edit.html.haml
+++ b/app/views/app_admin/users/edit.html.haml
@@ -19,7 +19,7 @@
     .form-group
       %label.control-label.col-sm-2 Person id
       .col-sm-2
-        = f.text_field :person_id, type: 'number', class: "form-control"
+        = f.text_field :person_id, class: "form-control"
 
     .form-group
       %label.control-label.col-sm-2 Password
