--- a/app/views/app_admin/users/new.html.haml
+++ b/app/views/app_admin/users/new.html.haml
@@ -18,7 +18,7 @@
     .form-group
       %label.control-label.col-sm-1 Person id
       .col-sm-2
-        = f.text_field :person_id, type: 'number', class: "form-control"
+        = f.text_field :person_id,  class: "form-control"
 
     .form-group
       %label.control-label.col-sm-1 Password
