--- a/app/views/app_admin/users/form_create_with_user.html.haml
+++ b/app/views/app_admin/users/form_create_with_user.html.haml
@@ -30,6 +30,11 @@
       .col-sm-4
         = text_field :user, :password, required: true, class: "form-control"
 
+    .form-group
+      %label.control-label.col-sm-2 Notes
+      .col-sm-4
+        = text_area :user, :notes, class: "form-control"
+
   .form-group
     .col-sm-2
       = button_tag type: 'submit', class: "btn btn-success" do
