--- a/app/views/app_admin/groups/_group.html.haml
+++ b/app/views/app_admin/groups/_group.html.haml
@@ -18,6 +18,18 @@
           %i.fa.fa-eye-open
           Details
       %li
+        = link_to show_media_sets_app_admin_group_path(group), class: "btn btn-warning btn-xs" do
+          %i.icon-vis-graph
+            = "Media sets:"
+            %span.sets-count
+              = "#{MediaResource.accessible_by_group(group, :view).where(:type => "MediaSet").count}"
+      %li
+        = link_to show_media_entries_app_admin_group_path(group), class: "btn btn-warning btn-xs" do
+          %i.icon-vis-graph
+            = "Media entries:"
+            %span.entries-count
+              = "#{MediaResource.accessible_by_group(group, :view).where(:type => "MediaEntry").count}"
+      %li
         = link_to edit_app_admin_group_path(group), class: "btn btn-warning btn-xs edit" do
           %i.icon-pen
           Edit
